2002-05-24  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* pylibs/SocketMan/SocketMan.py(SocketMan._reset): now doesn't
	barf if the socket removal fails

	* pylibs/AE/CodeSources.py(updatecache): now attempts to do
	something a bit more intelligent when errors occur during reload

2002-05-21  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/rewrite.py: forgot to add a check for the case
	when rewrite is loaded before templating in choosing the 404
	handler.

2002-05-17  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/PyDO/PyDO.py (PyDO.static_getSQLWhere): fix for 
	dealing with no results

2002-05-15  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Services/auth/__init__.py: importing ERROR

	* SkunkWeb/configure.in: add auth to list of services.

2002-05-14  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Services/auth/__init__.py (PlainSessionAuth.__init__):
	removed reference to passwordSlot, which is outdated.

2002-05-10  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Services/rewrite.py (Status404): added a
	DynamicRewriter subclass that raises a 404.  If templating
	is (or is to be, to the extent it is possible to determine)
	loaded,  it uses templating's 404 handler by default.

2002-05-09  Andrew Csillag  <drew@yahoo.com>

	* docs/html/Makefile: no more dependancy on the long missing devel.bib

	* docs/devel/devel.tex: now will build (had extraneous \'s in it)

	* docs/README: new

	* SkunkWeb/Services/templating/UrlBuilder.py(hidden): now encodes 
	key/value pairs where the value is None as "" instead of not putting
	in the hidden tag altogether

	* INSTALL: added doc about building/obtaining the documentation

	* SkunkWeb/Services/httpd/protocol.py(marshalResponse):
	pretty much rewritten so can add a Server: header if there wasn't 
	one already and still do the proper handling of the Status header.

	* SkunkWeb/Services/web/protocol.py(_initHeaders): no longer
	adds default Server: header
