@@ -1,3 +1,9 @@
+
+2002-05-24  Jacob Smullyan  <jsmullyan@wnyc.org>
+
+	* SkunkWeb/Services/httpd/__init__.py, SkunkWeb/Services/aecgi.py:
+	add request handler in ServerStart hook, not directly on import.
+
 2002-05-24  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>
 
 	* pylibs/SocketMan/SocketMan.py(SocketMan._reset): now doesn't
